[package]
name = "git-credential-op"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "git-credential-op"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
config = "0.14.0"
serde = { version = "1.0.197", features = ["derive"] }
